...
                          indicatorColor: Color(0x0089DC8C),
                          tabs: [
                            Tab(
                              text: 'Sign Up',
                            ),
                            Tab(
                              key: ValueKey('LoginTab_sq9s'),
                              text: 'Login',
                            ),
                          ],
                          controller: _model.tabBarController,
                          onTap: (i) async {
                            [() async {}, () async {}][i]();
...
                            Column(
                              mainAxisSize: MainAxisSize.max,
                              children: [
                                Container(
                                  width: double.infinity,
                                  child: TextFormField(
                                    key: ValueKey('SignUp-Email_78cr'),
                                    controller:
                                        _model.signUpEmailTextController,
                                    focusNode: _model.signUpEmailFocusNode,
                                    onChanged: (_) => EasyDebounce.debounce(
                                      '_model.signUpEmailTextController',
                                      Duration(milliseconds: 2000),
...
                                        .asValidator(context),
                                  ),
                                ),
                                Container(
                                  width: double.infinity,
                                  child: TextFormField(
                                    key: ValueKey('Signup-Password_7l9f'),
                                    controller:
                                        _model.signupPasswordTextController,
                                    focusNode: _model.signupPasswordFocusNode,
                                    autofocus: false,
                                    textInputAction: TextInputAction.next,
                                    obscureText:
...
                                  ),
                                ),
                                Container(
                                  width: double.infinity,
                                  child: TextFormField(
                                    key:
                                        ValueKey('SignUp-ConfirmPassword_p9kl'),
                                    controller: _model
                                        .signUpConfirmPasswordTextController,
                                    focusNode:
                                        _model.signUpConfirmPasswordFocusNode,
                                    autofocus: false,
                                    textInputAction: TextInputAction.done,
...
                            Column(
                              mainAxisSize: MainAxisSize.max,
                              children: [
                                Container(
                                  width: double.infinity,
                                  child: TextFormField(
                                    key: ValueKey('Login-email_1zpq'),
                                    controller: _model.loginEmailTextController,
                                    focusNode: _model.loginEmailFocusNode,
                                    onChanged: (_) => EasyDebounce.debounce(
                                      '_model.loginEmailTextController',
                                      Duration(milliseconds: 2000),
                                      () => safeSetState(() {}),
...
                                        .asValidator(context),
                                  ),
                                ),
                                Container(
                                  width: double.infinity,
                                  child: TextFormField(
                                    key: ValueKey('Login-Password_hf3p'),
                                    controller:
                                        _model.loginPasswordTextController,
                                    focusNode: _model.loginPasswordFocusNode,
                                    autofocus: false,
                                    textInputAction: TextInputAction.done,
                                    obscureText:
...
                  ),
                ),
                if (_model.tabBarCurrentIndex == 1)
                  Semantics(
                    label: 'LoginButton',
                    child: FFButtonWidget(
                      key: ValueKey('Login-Button_tvow'),
                      onPressed: () async {
                        logFirebaseEvent('LOGIN_PAGE_Login-Button_ON_TAP');
                        logFirebaseEvent('Login-Button_auth');
                        GoRouter.of(context).prepareAuthEvent();

                        final user = await authManager.signInWithEmail(
...
                    ),
                  ),
                Stack(
                  children: [
                    if (_model.tabBarCurrentIndex == 0)
                      FFButtonWidget(
                        key: ValueKey('SignUp-Button_p36c'),
                        onPressed: () async {
                          logFirebaseEvent('LOGIN_PAGE_SignUp-Button_ON_TAP');
                          logFirebaseEvent('SignUp-Button_auth');
                          GoRouter.of(context).prepareAuthEvent();
                          if (_model.signupPasswordTextController.text !=
                              _model.signUpConfirmPasswordTextController.text) {
...
