import 'dart:io';
import 'package:flutter/gestures.dart';
import 'package:flutter/material.dart';
import 'package:flutter_test/flutter_test.dart';
import 'package:google_fonts/google_fonts.dart';
import 'package:integration_test/integration_test.dart';
import 'package:to_do25/flutter_flow/flutter_flow_icon_button.dart';
import 'package:to_do25/flutter_flow/flutter_flow_widgets.dart';
import 'package:to_do25/flutter_flow/flutter_flow_theme.dart';
import 'package:to_do25/index.dart';
import 'package:to_do25/main.dart';
import 'package:to_do25/flutter_flow/flutter_flow_util.dart';

import 'package:to_do25/backend/firebase/firebase_config.dart';
import 'package:to_do25/auth/firebase_auth/auth_util.dart';
import 'package:firebase_auth/firebase_auth.dart';

void main() async {
  IntegrationTestWidgetsFlutterBinding.ensureInitialized();

  setUpAll(() async {
    await initFirebase();

    await FlutterFlowTheme.initialize();
  });

  setUp(() async {
    await authManager.signOut();
  });

  testWidgets('Account Creation Test', (WidgetTester tester) async {
    _overrideOnError();

    await tester.pumpWidget(const MyApp());
    await GoogleFonts.pendingFonts();

    await tester.pumpAndSettle(const Duration(milliseconds: 5000));
    await tester.enterText(
        find.byKey(const ValueKey('SignUp-Email_78cr')), 'vic1@uri.edu');
    await tester.enterText(
        find.byKey(const ValueKey('Signup-Password_7l9f')), 'password');
    await tester.enterText(
        find.byKey(const ValueKey('SignUp-ConfirmPassword_p9kl')), 'password');
    await tester.tap(find.byKey(const ValueKey('SignUp-Button_p36c')));
    await tester.pumpAndSettle(const Duration(milliseconds: 5000));
    expect(find.text('Profile'), findsWidgets);
  });

  testWidgets('Login Test', (WidgetTester tester) async {
    _overrideOnError();

    await tester.pumpWidget(const MyApp());
    await GoogleFonts.pendingFonts();

    await tester.pumpAndSettle(const Duration(milliseconds: 5000));
    await tester.tap(find.byKey(const ValueKey('LoginTab_sq9s')));
    await tester.pump(kDoubleTapMinTime);
    await tester.tap(find.byKey(const ValueKey('LoginTab_sq9s')));
    await tester.enterText(
        find.byKey(const ValueKey('Login-email_1zpq')), 'test@uri.edu');
    await tester.enterText(
        find.byKey(const ValueKey('Login-Password_hf3p')), 'password');
    await tester.tap(find.byKey(const ValueKey('Login-Button_tvow')));
    await tester.pumpAndSettle(const Duration(milliseconds: 5000));
    expect(find.text('Tasks'), findsWidgets);
  });
}

// There are certain types of errors that can happen during tests but
// should not break the test.
void _overrideOnError() {
  final originalOnError = FlutterError.onError!;
  FlutterError.onError = (errorDetails) {
    if (_shouldIgnoreError(errorDetails.toString())) {
      return;
    }
    originalOnError(errorDetails);
  };
}

bool _shouldIgnoreError(String error) {
  // It can fail to decode some SVGs - this should not break the test.
  if (error.contains('ImageCodecException')) {
    return true;
  }
  // Overflows happen all over the place,
  // but they should not break tests.
  if (error.contains('overflowed by')) {
    return true;
  }
  // Sometimes some images fail to load, it generally does not break the test.
  if (error.contains('No host specified in URI') ||
      error.contains('EXCEPTION CAUGHT BY IMAGE RESOURCE SERVICE')) {
    return true;
  }
  // These errors should be avoided, but they should not break the test.
  if (error.contains('setState() called after dispose()')) {
    return true;
  }
  // Web-specific error when interacting with TextInputType.emailAddress
  if (error.contains('setSelectionRange') &&
      error.contains('HTMLInputElement')) {
    return true;
  }

  return false;
}
